@@ -1,3 +1,7 @@
+2004-12-19  Chris Taylor  <c.taylor@student.curtin.edu.au>
+
+	* include/u_mem.h: prototype for strdup with MPW
+
 2004-12-17  Chris Taylor  <c.taylor@student.curtin.edu.au>
 
 	* main/state.c: open autosave file for writing, not reading
